--- a/GRIP-Task8-timeline_analysis_covid-19.ipynb
+++ b/GRIP-Task8-timeline_analysis_covid-19.ipynb
@@ -25,9 +25,8 @@
    "id": "aea65c7e",
    "metadata": {},
    "source": [
-    "### Author : Tamer Ahmed\n",
-    "B.E - Computer science and Engineering\n",
-    "College : Government Engineering College Banswara Rajasthan"
+    "### Author : Tamer Ahmed\n"
+
    ]
   },
   {
